go/parser/y.output

state 0
	$accept: .parse_toplevel $end 
	stmt: .    (6)

	WITH  shift 14
	SELECT  shift 11
	TABLE  shift 12
	VALUES  shift 16
	WITH_LA  shift 15
	'('  shift 10
	.  reduce 6 (src line 241)

	parse_toplevel  goto 1
	stmtmulti  goto 2
	toplevel_stmt  goto 3
	stmt  goto 4
	SelectStmt  goto 5
	select_no_parens  goto 6
	select_with_parens  goto 7
	simple_select  goto 8
	with_clause  goto 9
	values_clause  goto 13

state 1
	$accept:  parse_toplevel.$end 

	$end  accept
	.  error


state 2
	parse_toplevel:  stmtmulti.    (1)
	stmtmulti:  stmtmulti.';' toplevel_stmt 

	';'  shift 17
	.  reduce 1 (src line 189)


state 3
	stmtmulti:  toplevel_stmt.    (3)

	.  reduce 3 (src line 213)


state 4
	toplevel_stmt:  stmt.    (4)

	.  reduce 4 (src line 227)


state 5
	stmt:  SelectStmt.    (5)

	.  reduce 5 (src line 239)


state 6
	SelectStmt:  select_no_parens.    (254)

	.  reduce 254 (src line 1396)


state 7
	SelectStmt:  select_with_parens.    (255)

	.  reduce 255 (src line 1398)


state 8
	select_no_parens:  simple_select.    (259)

	.  reduce 259 (src line 1415)


state 9
	select_no_parens:  with_clause.simple_select 

	SELECT  shift 11
	TABLE  shift 12
	VALUES  shift 16
	.  error

	simple_select  goto 18
	values_clause  goto 13

state 10
	select_with_parens:  '('.select_no_parens ')' 
	select_with_parens:  '('.select_with_parens ')' 

	WITH  shift 14
	SELECT  shift 11
	TABLE  shift 12
	VALUES  shift 16
	WITH_LA  shift 15
	'('  shift 10
	.  error

	select_no_parens  goto 19
	select_with_parens  goto 20
	simple_select  goto 8
	with_clause  goto 9
	values_clause  goto 13

11: shift/reduce conflict (shift 23(0), red'n 333(0)) on ALL
 11: reduce/reduce conflict  (red'ns 333 and 337) on $end
 11: reduce/reduce conflict  (red'ns 333 and 337) on IDENT
 11: reduce/reduce conflict  (red'ns 333 and 337) on FCONST
 11: reduce/reduce conflict  (red'ns 333 and 337) on SCONST
 11: reduce/reduce conflict  (red'ns 333 and 337) on Op
 11: reduce/reduce conflict  (red'ns 333 and 337) on ICONST
 11: reduce/reduce conflict  (red'ns 333 and 337) on PARAM
11: shift/reduce conflict (shift 23(0), red'n 337(0)) on ALL
 11: reduce/reduce conflict  (red'ns 333 and 337) on NOT
 11: reduce/reduce conflict  (red'ns 333 and 337) on FALSE_P
 11: reduce/reduce conflict  (red'ns 333 and 337) on NULL_P
 11: reduce/reduce conflict  (red'ns 333 and 337) on TRUE_P
 11: reduce/reduce conflict  (red'ns 333 and 337) on OPERATOR
 11: reduce/reduce conflict  (red'ns 333 and 337) on FROM
 11: reduce/reduce conflict  (red'ns 333 and 337) on WHERE
 11: reduce/reduce conflict  (red'ns 333 and 337) on BY
 11: reduce/reduce conflict  (red'ns 333 and 337) on INTO
 11: reduce/reduce conflict  (red'ns 333 and 337) on RECURSIVE
 11: reduce/reduce conflict  (red'ns 333 and 337) on MATERIALIZED
 11: reduce/reduce conflict  (red'ns 333 and 337) on SEARCH
 11: reduce/reduce conflict  (red'ns 333 and 337) on BREADTH
 11: reduce/reduce conflict  (red'ns 333 and 337) on DEPTH
 11: reduce/reduce conflict  (red'ns 333 and 337) on CYCLE
 11: reduce/reduce conflict  (red'ns 333 and 337) on FIRST_P
 11: reduce/reduce conflict  (red'ns 333 and 337) on SET
 11: reduce/reduce conflict  (red'ns 333 and 337) on '+'
 11: reduce/reduce conflict  (red'ns 333 and 337) on '-'
 11: reduce/reduce conflict  (red'ns 333 and 337) on '*'
 11: reduce/reduce conflict  (red'ns 333 and 337) on ';'
 11: reduce/reduce conflict  (red'ns 333 and 337) on '('
 11: reduce/reduce conflict  (red'ns 333 and 337) on ')'
state 11
	simple_select:  SELECT.opt_all_clause opt_target_list into_clause from_clause where_clause 
	simple_select:  SELECT.opt_distinct_clause opt_target_list into_clause from_clause where_clause 
	opt_all_clause: .    (333)
	opt_distinct_clause: .    (337)

	ALL  shift 23
	DISTINCT  shift 25
	.  reduce 333 (src line 1930)

	opt_all_clause  goto 21
	distinct_clause  goto 24
	opt_distinct_clause  goto 22

state 12
	simple_select:  TABLE.relation_expr 

	IDENT  shift 31
	ALL  shift 34
	FALSE_P  shift 45
	TRUE_P  shift 44
	ONLY  shift 30
	BY  shift 43
	RECURSIVE  shift 36
	MATERIALIZED  shift 35
	SEARCH  shift 37
	BREADTH  shift 38
	DEPTH  shift 39
	CYCLE  shift 40
	FIRST_P  shift 41
	SET  shift 42
	.  error

	ColId  goto 29
	qualified_name  goto 27
	unreserved_keyword  goto 32
	col_name_keyword  goto 33
	relation_expr  goto 26
	extended_relation_expr  goto 28

state 13
	simple_select:  values_clause.    (264)
	values_clause:  values_clause.',' '(' expr_list ')' 

	','  shift 46
	.  reduce 264 (src line 1461)


state 14
	with_clause:  WITH.cte_list 
	with_clause:  WITH.RECURSIVE cte_list 

	IDENT  shift 31
	ALL  shift 34
	FALSE_P  shift 45
	TRUE_P  shift 44
	BY  shift 43
	RECURSIVE  shift 48
	MATERIALIZED  shift 35
	SEARCH  shift 37
	BREADTH  shift 38
	DEPTH  shift 39
	CYCLE  shift 40
	FIRST_P  shift 41
	SET  shift 42
	.  error

	ColId  goto 51
	name  goto 50
	unreserved_keyword  goto 32
	col_name_keyword  goto 33
	cte_list  goto 47
	common_table_expr  goto 49

state 15
	with_clause:  WITH_LA.cte_list 

	IDENT  shift 31
	ALL  shift 34
	FALSE_P  shift 45
	TRUE_P  shift 44
	BY  shift 43
	RECURSIVE  shift 36
	MATERIALIZED  shift 35
	SEARCH  shift 37
	BREADTH  shift 38
	DEPTH  shift 39
	CYCLE  shift 40
	FIRST_P  shift 41
	SET  shift 42
	.  error

	ColId  goto 51
	name  goto 50
	unreserved_keyword  goto 32
	col_name_keyword  goto 33
	cte_list  goto 52
	common_table_expr  goto 49

state 16
	values_clause:  VALUES.'(' expr_list ')' 

	'('  shift 53
	.  error


state 17
	stmtmulti:  stmtmulti ';'.toplevel_stmt 
	stmt: .    (6)

	WITH  shift 14
	SELECT  shift 11
	TABLE  shift 12
	VALUES  shift 16
	WITH_LA  shift 15
	'('  shift 10
	.  reduce 6 (src line 241)

	toplevel_stmt  goto 54
	stmt  goto 4
	SelectStmt  goto 5
	select_no_parens  goto 6
	select_with_parens  goto 7
	simple_select  goto 8
	with_clause  goto 9
	values_clause  goto 13

state 18
	select_no_parens:  with_clause simple_select.    (260)

	.  reduce 260 (src line 1417)


state 19
	select_with_parens:  '(' select_no_parens.')' 

	')'  shift 55
	.  error


state 20
	select_with_parens:  '(' select_with_parens.')' 

	')'  shift 56
	.  error


state 21
	simple_select:  SELECT opt_all_clause.opt_target_list into_clause from_clause where_clause 
	opt_target_list: .    (266)

	IDENT  shift 82
	FCONST  shift 76
	SCONST  shift 85
	Op  shift 72
	ICONST  shift 84
	PARAM  shift 69
	ALL  shift 34
	NOT  shift 65
	FALSE_P  shift 79
	NULL_P  shift 80
	TRUE_P  shift 78
	OPERATOR  shift 73
	BY  shift 43
	RECURSIVE  shift 36
	MATERIALIZED  shift 35
	SEARCH  shift 37
	BREADTH  shift 38
	DEPTH  shift 39
	CYCLE  shift 40
	FIRST_P  shift 41
	SET  shift 42
	'+'  shift 63
	'-'  shift 64
	'*'  shift 61
	'('  shift 70
	.  reduce 266 (src line 1474)

	ColId  goto 74
	unreserved_keyword  goto 83
	col_name_keyword  goto 33
	type_func_name_keyword  goto 88
	a_expr  goto 60
	c_expr  goto 62
	AexprConst  goto 68
	columnref  goto 67
	func_expr  goto 71
	func_name  goto 86
	Iconst  goto 75
	Sconst  goto 77
	type_function_name  goto 87
	func_application  goto 81
	qual_Op  goto 66
	target_list  goto 58
	opt_target_list  goto 57
	target_el  goto 59

state 22
	simple_select:  SELECT opt_distinct_clause.opt_target_list into_clause from_clause where_clause 
	opt_target_list: .    (266)

	IDENT  shift 82
	FCONST  shift 76
	SCONST  shift 85
	Op  shift 72
	ICONST  shift 84
	PARAM  shift 69
	ALL  shift 34
	NOT  shift 65
	FALSE_P  shift 79
	NULL_P  shift 80
	TRUE_P  shift 78
	OPERATOR  shift 73
	BY  shift 43
	RECURSIVE  shift 36
	MATERIALIZED  shift 35
	SEARCH  shift 37
	BREADTH  shift 38
	DEPTH  shift 39
	CYCLE  shift 40
	FIRST_P  shift 41
	SET  shift 42
	'+'  shift 63
	'-'  shift 64
	'*'  shift 61
	'('  shift 70
	.  reduce 266 (src line 1474)

	ColId  goto 74
	unreserved_keyword  goto 83
	col_name_keyword  goto 33
	type_func_name_keyword  goto 88
	a_expr  goto 60
	c_expr  goto 62
	AexprConst  goto 68
	columnref  goto 67
	func_expr  goto 71
	func_name  goto 86
	Iconst  goto 75
	Sconst  goto 77
	type_function_name  goto 87
	func_application  goto 81
	qual_Op  goto 66
	target_list  goto 58
	opt_target_list  goto 89
	target_el  goto 59

state 23
	opt_all_clause:  ALL.    (332)

	.  reduce 332 (src line 1928)


state 24
	opt_distinct_clause:  distinct_clause.    (336)

	.  reduce 336 (src line 1938)


state 25
	distinct_clause:  DISTINCT.    (334)
	distinct_clause:  DISTINCT.ON '(' expr_list ')' 

	ON  shift 90
	.  reduce 334 (src line 1933)


state 26
	simple_select:  TABLE relation_expr.    (263)

	.  reduce 263 (src line 1451)


state 27
	relation_expr:  qualified_name.    (282)
	extended_relation_expr:  qualified_name.'*' 

	'*'  shift 91
	.  reduce 282 (src line 1565)


state 28
	relation_expr:  extended_relation_expr.    (283)

	.  reduce 283 (src line 1572)


state 29
	qualified_name:  ColId.    (41)
	qualified_name:  ColId.'.' ColId 
	qualified_name:  ColId.indirection 

	'.'  shift 92
	'['  shift 95
	.  reduce 41 (src line 349)

	indirection  goto 93
	indirection_el  goto 94

state 30
	extended_relation_expr:  ONLY.qualified_name 
	extended_relation_expr:  ONLY.'(' qualified_name ')' 

	IDENT  shift 31
	ALL  shift 34
	FALSE_P  shift 45
	TRUE_P  shift 44
	BY  shift 43
	RECURSIVE  shift 36
	MATERIALIZED  shift 35
	SEARCH  shift 37
	BREADTH  shift 38
	DEPTH  shift 39
	CYCLE  shift 40
	FIRST_P  shift 41
	SET  shift 42
	'('  shift 97
	.  error

	ColId  goto 29
	qualified_name  goto 96
	unreserved_keyword  goto 32
	col_name_keyword  goto 33

 31: reduce/reduce conflict  (red'ns 28 and 65) on $end
 31: reduce/reduce conflict  (red'ns 28 and 65) on IDENT
 31: reduce/reduce conflict  (red'ns 28 and 65) on Op
 31: reduce/reduce conflict  (red'ns 28 and 65) on TYPECAST
 31: reduce/reduce conflict  (red'ns 28 and 65) on LESS_EQUALS
 31: reduce/reduce conflict  (red'ns 28 and 65) on GREATER_EQUALS
 31: reduce/reduce conflict  (red'ns 28 and 65) on NOT_EQUALS
 31: reduce/reduce conflict  (red'ns 28 and 65) on ALL
 31: reduce/reduce conflict  (red'ns 28 and 65) on ALTER
 31: reduce/reduce conflict  (red'ns 28 and 65) on AS
 31: reduce/reduce conflict  (red'ns 28 and 65) on CREATE
 31: reduce/reduce conflict  (red'ns 28 and 65) on DROP
 31: reduce/reduce conflict  (red'ns 28 and 65) on AND
 31: reduce/reduce conflict  (red'ns 28 and 65) on OR
 31: reduce/reduce conflict  (red'ns 28 and 65) on BETWEEN
 31: reduce/reduce conflict  (red'ns 28 and 65) on COLLATE
 31: reduce/reduce conflict  (red'ns 28 and 65) on ESCAPE
 31: reduce/reduce conflict  (red'ns 28 and 65) on FALSE_P
 31: reduce/reduce conflict  (red'ns 28 and 65) on ILIKE
 31: reduce/reduce conflict  (red'ns 28 and 65) on IN_P
 31: reduce/reduce conflict  (red'ns 28 and 65) on LIKE
 31: reduce/reduce conflict  (red'ns 28 and 65) on SIMILAR
 31: reduce/reduce conflict  (red'ns 28 and 65) on TRUE_P
 31: reduce/reduce conflict  (red'ns 28 and 65) on IS
 31: reduce/reduce conflict  (red'ns 28 and 65) on ISNULL
 31: reduce/reduce conflict  (red'ns 28 and 65) on NOTNULL
 31: reduce/reduce conflict  (red'ns 28 and 65) on AT
 31: reduce/reduce conflict  (red'ns 28 and 65) on TO
 31: reduce/reduce conflict  (red'ns 28 and 65) on OPERATOR
 31: reduce/reduce conflict  (red'ns 28 and 65) on SELECT
 31: reduce/reduce conflict  (red'ns 28 and 65) on FROM
 31: reduce/reduce conflict  (red'ns 28 and 65) on WHERE
 31: reduce/reduce conflict  (red'ns 28 and 65) on TABLE
 31: reduce/reduce conflict  (red'ns 28 and 65) on BY
 31: reduce/reduce conflict  (red'ns 28 and 65) on INTO
 31: reduce/reduce conflict  (red'ns 28 and 65) on ON
 31: reduce/reduce conflict  (red'ns 28 and 65) on JOIN
 31: reduce/reduce conflict  (red'ns 28 and 65) on INNER_P
 31: reduce/reduce conflict  (red'ns 28 and 65) on LEFT
 31: reduce/reduce conflict  (red'ns 28 and 65) on RIGHT
 31: reduce/reduce conflict  (red'ns 28 and 65) on FULL
 31: reduce/reduce conflict  (red'ns 28 and 65) on CROSS
 31: reduce/reduce conflict  (red'ns 28 and 65) on NATURAL
 31: reduce/reduce conflict  (red'ns 28 and 65) on USING
 31: reduce/reduce conflict  (red'ns 28 and 65) on RECURSIVE
 31: reduce/reduce conflict  (red'ns 28 and 65) on MATERIALIZED
 31: reduce/reduce conflict  (red'ns 28 and 65) on VALUES
 31: reduce/reduce conflict  (red'ns 28 and 65) on SEARCH
 31: reduce/reduce conflict  (red'ns 28 and 65) on BREADTH
 31: reduce/reduce conflict  (red'ns 28 and 65) on DEPTH
 31: reduce/reduce conflict  (red'ns 28 and 65) on CYCLE
 31: reduce/reduce conflict  (red'ns 28 and 65) on FIRST_P
 31: reduce/reduce conflict  (red'ns 28 and 65) on SET
 31: reduce/reduce conflict  (red'ns 28 and 65) on NOT_LA
 31: reduce/reduce conflict  (red'ns 28 and 65) on '<'
 31: reduce/reduce conflict  (red'ns 28 and 65) on '>'
 31: reduce/reduce conflict  (red'ns 28 and 65) on '='
 31: reduce/reduce conflict  (red'ns 28 and 65) on '+'
 31: reduce/reduce conflict  (red'ns 28 and 65) on '-'
 31: reduce/reduce conflict  (red'ns 28 and 65) on '*'
 31: reduce/reduce conflict  (red'ns 28 and 65) on '/'
 31: reduce/reduce conflict  (red'ns 28 and 65) on '%'
 31: reduce/reduce conflict  (red'ns 28 and 65) on '^'
 31: reduce/reduce conflict  (red'ns 28 and 65) on ';'
 31: reduce/reduce conflict  (red'ns 28 and 65) on ','
 31: reduce/reduce conflict  (red'ns 28 and 65) on '.'
 31: reduce/reduce conflict  (red'ns 28 and 65) on '('
 31: reduce/reduce conflict  (red'ns 28 and 65) on ')'
 31: reduce/reduce conflict  (red'ns 28 and 65) on '['
 31: reduce/reduce conflict  (red'ns 28 and 65) on ']'
 31: reduce/reduce conflict  (red'ns 28 and 65) on ':'
state 31
	ColId:  IDENT.    (28)
	col_name_keyword:  IDENT.    (65)

	.  reduce 28 (src line 305)


state 32
	ColId:  unreserved_keyword.    (29)

	.  reduce 29 (src line 307)


state 33
	ColId:  col_name_keyword.    (30)

	.  reduce 30 (src line 308)


state 34
	unreserved_keyword:  ALL.    (53)

	.  reduce 53 (src line 450)


state 35
	unreserved_keyword:  MATERIALIZED.    (54)

	.  reduce 54 (src line 453)


state 36
	unreserved_keyword:  RECURSIVE.    (55)

	.  reduce 55 (src line 454)


state 37
	unreserved_keyword:  SEARCH.    (56)

	.  reduce 56 (src line 455)


state 38
	unreserved_keyword:  BREADTH.    (57)

	.  reduce 57 (src line 456)


state 39
	unreserved_keyword:  DEPTH.    (58)

	.  reduce 58 (src line 457)


state 40
	unreserved_keyword:  CYCLE.    (59)

	.  reduce 59 (src line 458)


state 41
	unreserved_keyword:  FIRST_P.    (60)

	.  reduce 60 (src line 459)


state 42
	unreserved_keyword:  SET.    (61)

	.  reduce 61 (src line 460)


state 43
	unreserved_keyword:  BY.    (62)

	.  reduce 62 (src line 461)


state 44
	unreserved_keyword:  TRUE_P.    (63)

	.  reduce 63 (src line 462)


state 45
	unreserved_keyword:  FALSE_P.    (64)

	.  reduce 64 (src line 463)


state 46
	values_clause:  values_clause ','.'(' expr_list ')' 

	'('  shift 98
	.  error


state 47
	with_clause:  WITH cte_list.    (302)
	cte_list:  cte_list.',' common_table_expr 

	','  shift 99
	.  reduce 302 (src line 1738)


state 48
	unreserved_keyword:  RECURSIVE.    (55)
	with_clause:  WITH RECURSIVE.cte_list 

	IDENT  shift 31
	ALL  shift 34
	FALSE_P  shift 45
	TRUE_P  shift 44
	BY  shift 43
	RECURSIVE  shift 36
	MATERIALIZED  shift 35
	SEARCH  shift 37
	BREADTH  shift 38
	DEPTH  shift 39
	CYCLE  shift 40
	FIRST_P  shift 41
	SET  shift 42
	.  reduce 55 (src line 454)

	ColId  goto 51
	name  goto 50
	unreserved_keyword  goto 32
	col_name_keyword  goto 33
	cte_list  goto 100
	common_table_expr  goto 49

state 49
	cte_list:  common_table_expr.    (307)

	.  reduce 307 (src line 1758)


state 50
	common_table_expr:  name.opt_name_list AS opt_materialized '(' PreparableStmt ')' opt_search_clause opt_cycle_clause 
	opt_name_list: .    (45)

	'('  shift 102
	.  reduce 45 (src line 396)

	opt_name_list  goto 101

state 51
	name:  ColId.    (36)

	.  reduce 36 (src line 319)


state 52
	with_clause:  WITH_LA cte_list.    (303)
	cte_list:  cte_list.',' common_table_expr 

	','  shift 99
	.  reduce 303 (src line 1743)


state 53
	values_clause:  VALUES '('.expr_list ')' 

	IDENT  shift 82
	FCONST  shift 76
	SCONST  shift 85
	Op  shift 72
	ICONST  shift 84
	PARAM  shift 69
	ALL  shift 34
	NOT  shift 65
	FALSE_P  shift 79
	NULL_P  shift 80
	TRUE_P  shift 78
	OPERATOR  shift 73
	BY  shift 43
	RECURSIVE  shift 36
	MATERIALIZED  shift 35
	SEARCH  shift 37
	BREADTH  shift 38
	DEPTH  shift 39
	CYCLE  shift 40
	FIRST_P  shift 41
	SET  shift 42
	'+'  shift 63
	'-'  shift 64
	'('  shift 70
	.  error

	ColId  goto 74
	unreserved_keyword  goto 83
	col_name_keyword  goto 33
	type_func_name_keyword  goto 88
	a_expr  goto 104
	c_expr  goto 62
	AexprConst  goto 68
	columnref  goto 67
	func_expr  goto 71
	func_name  goto 86
	Iconst  goto 75
	Sconst  goto 77
	type_function_name  goto 87
	expr_list  goto 103
	func_application  goto 81
	qual_Op  goto 66

state 54
	stmtmulti:  stmtmulti ';' toplevel_stmt.    (2)

	.  reduce 2 (src line 204)


state 55
	select_with_parens:  '(' select_no_parens ')'.    (257)

	.  reduce 257 (src line 1406)


state 56
	select_with_parens:  '(' select_with_parens ')'.    (258)

	.  reduce 258 (src line 1408)


state 57
	simple_select:  SELECT opt_all_clause opt_target_list.into_clause from_clause where_clause 
	into_clause: .    (339)

	INTO  shift 106
	.  reduce 339 (src line 1953)

	into_clause  goto 105

state 58
	opt_target_list:  target_list.    (265)
	target_list:  target_list.',' target_el 

	','  shift 107
	.  reduce 265 (src line 1472)


state 59
	target_list:  target_el.    (267)

	.  reduce 267 (src line 1477)


state 60
	a_expr:  a_expr.TYPECAST Typename 
	a_expr:  a_expr.'+' a_expr 
	a_expr:  a_expr.'-' a_expr 
	a_expr:  a_expr.'*' a_expr 
	a_expr:  a_expr.'/' a_expr 
	a_expr:  a_expr.'%' a_expr 
	a_expr:  a_expr.'^' a_expr 
	a_expr:  a_expr.'<' a_expr 
	a_expr:  a_expr.'>' a_expr 
	a_expr:  a_expr.'=' a_expr 
	a_expr:  a_expr.LESS_EQUALS a_expr 
	a_expr:  a_expr.GREATER_EQUALS a_expr 
	a_expr:  a_expr.NOT_EQUALS a_expr 
	a_expr:  a_expr.AND a_expr 
	a_expr:  a_expr.OR a_expr 
	a_expr:  a_expr.IS NULL_P 
	a_expr:  a_expr.ISNULL 
	a_expr:  a_expr.IS NOT NULL_P 
	a_expr:  a_expr.NOTNULL 
	a_expr:  a_expr.LIKE a_expr 
	a_expr:  a_expr.LIKE a_expr ESCAPE a_expr 
	a_expr:  a_expr.NOT_LA LIKE a_expr 
	a_expr:  a_expr.NOT_LA LIKE a_expr ESCAPE a_expr 
	a_expr:  a_expr.ILIKE a_expr 
	a_expr:  a_expr.ILIKE a_expr ESCAPE a_expr 
	a_expr:  a_expr.NOT_LA ILIKE a_expr 
	a_expr:  a_expr.NOT_LA ILIKE a_expr ESCAPE a_expr 
	a_expr:  a_expr.COLLATE any_name 
	a_expr:  a_expr.AT TIME ZONE a_expr 
	a_expr:  a_expr.AT LOCAL 
	a_expr:  a_expr.qual_Op a_expr 
	a_expr:  a_expr.BETWEEN opt_asymmetric b_expr AND a_expr 
	a_expr:  a_expr.NOT_LA BETWEEN opt_asymmetric b_expr AND a_expr 
	a_expr:  a_expr.BETWEEN SYMMETRIC b_expr AND a_expr 
	a_expr:  a_expr.NOT_LA BETWEEN SYMMETRIC b_expr AND a_expr 
	a_expr:  a_expr.IN_P in_expr 
	a_expr:  a_expr.NOT_LA IN_P in_expr 
	a_expr:  a_expr.SIMILAR TO a_expr 
	a_expr:  a_expr.SIMILAR TO a_expr ESCAPE a_expr 
	a_expr:  a_expr.NOT_LA SIMILAR TO a_expr 
	a_expr:  a_expr.NOT_LA SIMILAR TO a_expr ESCAPE a_expr 
	target_el:  a_expr.AS ColLabel 
	target_el:  a_expr.ColLabel 
	target_el:  a_expr.    (271)

	IDENT  shift 137
	Op  shift 72
	TYPECAST  shift 108
	LESS_EQUALS  shift 118
	GREATER_EQUALS  shift 119
	NOT_EQUALS  shift 120
	ALL  shift 34
	ALTER  shift 144
	AS  shift 135
	CREATE  shift 142
	DROP  shift 143
	AND  shift 121
	OR  shift 122
	BETWEEN  shift 132
	COLLATE  shift 129
	FALSE_P  shift 45
	ILIKE  shift 128
	IN_P  shift 133
	LIKE  shift 126
	SIMILAR  shift 134
	TRUE_P  shift 44
	IS  shift 123
	ISNULL  shift 124
	NOTNULL  shift 125
	AT  shift 130
	OPERATOR  shift 73
	BY  shift 43
	RECURSIVE  shift 36
	MATERIALIZED  shift 35
	SEARCH  shift 37
	BREADTH  shift 38
	DEPTH  shift 39
	CYCLE  shift 40
	FIRST_P  shift 41
	SET  shift 42
	NOT_LA  shift 127
	'<'  shift 115
	'>'  shift 116
	'='  shift 117
	'+'  shift 109
	'-'  shift 110
	'*'  shift 111
	'/'  shift 112
	'%'  shift 113
	'^'  shift 114
	.  reduce 271 (src line 1492)

	ColLabel  goto 136
	unreserved_keyword  goto 138
	col_name_keyword  goto 139
	type_func_name_keyword  goto 140
	reserved_keyword  goto 141
	qual_Op  goto 131

state 61
	target_el:  '*'.    (272)

	.  reduce 272 (src line 1497)


state 62
	a_expr:  c_expr.    (70)

	.  reduce 70 (src line 495)


state 63
	a_expr:  '+'.a_expr 

	IDENT  shift 82
	FCONST  shift 76
	SCONST  shift 85
	Op  shift 72
	ICONST  shift 84
	PARAM  shift 69
	ALL  shift 34
	NOT  shift 65
	FALSE_P  shift 79
	NULL_P  shift 80
	TRUE_P  shift 78
	OPERATOR  shift 73
	BY  shift 43
	RECURSIVE  shift 36
	MATERIALIZED  shift 35
	SEARCH  shift 37
	BREADTH  shift 38
	DEPTH  shift 39
	CYCLE  shift 40
	FIRST_P  shift 41
	SET  shift 42
	'+'  shift 63
	'-'  shift 64
	'('  shift 70
	.  error

	ColId  goto 74
	unreserved_keyword  goto 83
	col_name_keyword  goto 33
	type_func_name_keyword  goto 88
	a_expr  goto 145
	c_expr  goto 62
	AexprConst  goto 68
	columnref  goto 67
	func_expr  goto 71
	func_name  goto 86
	Iconst  goto 75
	Sconst  goto 77
	type_function_name  goto 87
	func_application  goto 81
	qual_Op  goto 66

state 64
	a_expr:  '-'.a_expr 

	IDENT  shift 82
	FCONST  shift 76
	SCONST  shift 85
	Op  shift 72
	ICONST  shift 84
	PARAM  shift 69
	ALL  shift 34
	NOT  shift 65
	FALSE_P  shift 79
	NULL_P  shift 80
	TRUE_P  shift 78
	OPERATOR  shift 73
	BY  shift 43
	RECURSIVE  shift 36
	MATERIALIZED  shift 35
	SEARCH  shift 37
	BREADTH  shift 38
	DEPTH  shift 39
	CYCLE  shift 40
	FIRST_P  shift 41
	SET  shift 42
	'+'  shift 63
	'-'  shift 64
	'('  shift 70
	.  error

	ColId  goto 74
	unreserved_keyword  goto 83
	col_name_keyword  goto 33
	type_func_name_keyword  goto 88
	a_expr  goto 146
	c_expr  goto 62
	AexprConst  goto 68
	columnref  goto 67
	func_expr  goto 71
	func_name  goto 86
	Iconst  goto 75
	Sconst  goto 77
	type_function_name  goto 87
	func_application  goto 81
	qual_Op  goto 66

state 65
	a_expr:  NOT.a_expr 

	IDENT  shift 82
	FCONST  shift 76
	SCONST  shift 85
	Op  shift 72
	ICONST  shift 84
	PARAM  shift 69
	ALL  shift 34
	NOT  shift 65
	FALSE_P  shift 79
	NULL_P  shift 80
	TRUE_P  shift 78
	OPERATOR  shift 73
	BY  shift 43
	RECURSIVE  shift 36
	MATERIALIZED  shift 35
	SEARCH  shift 37
	BREADTH  shift 38
	DEPTH  shift 39
	CYCLE  shift 40
	FIRST_P  shift 41
	SET  shift 42
	'+'  shift 63
	'-'  shift 64
	'('  shift 70
	.  error

	ColId  goto 74
	unreserved_keyword  goto 83
	col_name_keyword  goto 33
	type_func_name_keyword  goto 88
	a_expr  goto 147
	c_expr  goto 62
	AexprConst  goto 68
	columnref  goto 67
	func_expr  goto 71
	func_name  goto 86
	Iconst  goto 75
	Sconst  goto 77
	type_function_name  goto 87
	func_application  goto 81
	qual_Op  goto 66

state 66
	a_expr:  qual_Op.a_expr 

	IDENT  shift 82
	FCONST  shift 76
	SCONST  shift 85
	Op  shift 72
	ICONST  shift 84
	PARAM  shift 69
	ALL  shift 34
	NOT  shift 65
	FALSE_P  shift 79
	NULL_P  shift 80
	TRUE_P  shift 78
	OPERATOR  shift 73
	BY  shift 43
	RECURSIVE  shift 36
	MATERIALIZED  shift 35
	SEARCH  shift 37
	BREADTH  shift 38
	DEPTH  shift 39
	CYCLE  shift 40
	FIRST_P  shift 41
	SET  shift 42
	'+'  shift 63
	'-'  shift 64
	'('  shift 70
	.  error

	ColId  goto 74
	unreserved_keyword  goto 83
	col_name_keyword  goto 33
	type_func_name_keyword  goto 88
	a_expr  goto 148
	c_expr  goto 62
	AexprConst  goto 68
	columnref  goto 67
	func_expr  goto 71
	func_name  goto 86
	Iconst  goto 75
	Sconst  goto 77
	type_function_name  goto 87
	func_application  goto 81
	qual_Op  goto 66

state 67
	c_expr:  columnref.    (132)

	.  reduce 132 (src line 817)


state 68
	c_expr:  AexprConst.    (133)

	.  reduce 133 (src line 818)


state 69
	c_expr:  PARAM.opt_indirection 
	opt_indirection: .    (158)

	.  reduce 158 (src line 926)

	opt_indirection  goto 149

state 70
	c_expr:  '('.a_expr ')' opt_indirection 

	IDENT  shift 82
	FCONST  shift 76
	SCONST  shift 85
	Op  shift 72
	ICONST  shift 84
	PARAM  shift 69
	ALL  shift 34
	NOT  shift 65
	FALSE_P  shift 79
	NULL_P  shift 80
	TRUE_P  shift 78
	OPERATOR  shift 73
	BY  shift 43
	RECURSIVE  shift 36
	MATERIALIZED  shift 35
	SEARCH  shift 37
	BREADTH  shift 38
	DEPTH  shift 39
	CYCLE  shift 40
	FIRST_P  shift 41
	SET  shift 42
	'+'  shift 63
	'-'  shift 64
	'('  shift 70
	.  error

	ColId  goto 74
	unreserved_keyword  goto 83
	col_name_keyword  goto 33
	type_func_name_keyword  goto 88
	a_expr  goto 150
	c_expr  goto 62
	AexprConst  goto 68
	columnref  goto 67
	func_expr  goto 71
	func_name  goto 86
	Iconst  goto 75
	Sconst  goto 77
	type_function_name  goto 87
	func_application  goto 81
	qual_Op  goto 66

state 71
	c_expr:  func_expr.    (136)

	.  reduce 136 (src line 837)


state 72
	qual_Op:  Op.    (229)

	.  reduce 229 (src line 1326)


state 73
	qual_Op:  OPERATOR.'(' any_operator ')' 

	'('  shift 151
	.  error


state 74
	columnref:  ColId.    (148)
	columnref:  ColId.indirection 
	func_name:  ColId.indirection 
	type_function_name:  ColId.    (182)

	COLON_EQUALS  reduce 182 (src line 1054)
	EQUALS_GREATER  reduce 182 (src line 1054)
	'.'  shift 153
	'('  reduce 182 (src line 1054)
	'['  shift 95
	.  reduce 148 (src line 879)

	indirection  goto 152
	indirection_el  goto 94

state 75
	AexprConst:  Iconst.    (137)

	.  reduce 137 (src line 841)


state 76
	AexprConst:  FCONST.    (138)

	.  reduce 138 (src line 845)


state 77
	AexprConst:  Sconst.    (139)

	.  reduce 139 (src line 849)

